--- a/composer.json
+++ b/composer.json
@@ -15,17 +15,18 @@
             "homepage": "https://skyraptor.eu/"
         }
     ],
-    "require": {
-        "illuminate/support": "5.4.*||5.5.*||5.6.*||5.7.*||5.8.*||^6.0||^7.0||^8.0||^9.0",
-        "illuminate/session": "5.4.*||5.5.*||5.6.*||5.7.*||5.8.*||^6.0||^7.0||^8.0||^9.0",
-        "illuminate/events": "5.4.*||5.5.*||5.6.*||5.7.*||5.8.*||^6.0||^7.0||^8.0||^9.0",
-        "nesbot/carbon": "~1.20||^1.26.3||^2.0"
+   "require": {
+        "illuminate/support": "^10.0 || ^11.0",
+        "illuminate/session": "^10.0 || ^11.0",
+        "illuminate/events": "^10.0 || ^11.0",
+        "nesbot/carbon": "^2.0"
     },
     "require-dev": {
-        "phpunit/phpunit": "~5.0||~6.0||~7.0||~8.0||~9.0",
-        "mockery/mockery": "^1.0",
-        "orchestra/testbench": "^3.4|^4.0|^5.0|^6.0"
+        "phpunit/phpunit": "^10.0",
+        "mockery/mockery": "^1.5",
+        "orchestra/testbench": "^7.0"
     },
+    
     "autoload": {
         "psr-4": {
             "Gloudemans\\Shoppingcart\\": "src/"
